--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
-    "firebase": "^9.6.2",
+    "firebase": "^9.15.0",
     "html-react-parser": "^1.4.5",
     "js-confetti": "^0.10.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-button": "^0.7.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
